--- a/Shell/App.xaml
+++ b/Shell/App.xaml
@@ -7,6 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Company.UI;component/Languages/CN.xaml" />
                 <ResourceDictionary Source="/Company.UI;component/Styles/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
