--- a/WpfHelper/App.xaml
+++ b/WpfHelper/App.xaml
@@ -1,15 +1,15 @@
-﻿<prism:PrismApplication
-    x:Class="Shell.App"
+﻿<Application
+    x:Class="WpfHelper.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:Shell"
-    xmlns:prism="http://prismlibrary.com/">
+    xmlns:local="clr-namespace:WpfHelper"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Company.UI;component/Languages/US.xaml" />
+                <ResourceDictionary Source="/Company.UI;component/Languages/CN.xaml" />
                 <ResourceDictionary Source="/Company.UI;component/Styles/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
-</prism:PrismApplication>
+</Application>
