--- a/Company.Application.Main/Views/MainView.xaml
+++ b/Company.Application.Main/Views/MainView.xaml
@@ -6,17 +6,28 @@
     xmlns:local="clr-namespace:Company.Application.Main.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:share="clr-namespace:Company.Application.Share.Prism;assembly=Company.Application.Share"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
     Background="LightBlue"
     mc:Ignorable="d">
     <Grid>
-        <TextBlock
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            FontSize="50"
-            Foreground="DarkBlue"
-            Text="Welcome to the Main View!" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="500" />
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0">
+            <ContentControl prism:RegionManager.RegionName="{x:Static share:RegionNames.ImageRegion}" />
+        </Grid>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <ContentControl Grid.Row="0" prism:RegionManager.RegionName="{x:Static share:RegionNames.MenuRegion}" />
+        </Grid>
     </Grid>
 </UserControl>
