--- a/Company.Application.Menu/Views/MenuView.xaml
+++ b/Company.Application.Menu/Views/MenuView.xaml
@@ -11,7 +11,7 @@
     mc:Ignorable="d">
     <Menu Padding="5" FontSize="16">
         <MenuItem Header="设置">
-            <MenuItem Header="系统设置" />
+            <MenuItem Header="系统设置" Command="{Binding SystemConfigCommand}" />
         </MenuItem>
         <MenuItem Header="硬件">
             <MenuItem Header="运动轴" />
