--- a/Company.Application.Initialize/Views/InitializeView.xaml
+++ b/Company.Application.Initialize/Views/InitializeView.xaml
@@ -6,14 +6,21 @@
     xmlns:local="clr-namespace:Company.Application.Initialize.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    d:Height="450"
+    d:Width="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
         <TextBlock
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
+            TextWrapping="WrapWithOverflow"
             FontSize="20"
             Text="{Binding Message}" />
     </Grid>
