--- a/Company.Application.Config/Views/ConfigView.xaml
+++ b/Company.Application.Config/Views/ConfigView.xaml
@@ -1,14 +1,88 @@
-﻿<UserControl x:Class="Company.Application.Config.Views.ConfigView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Company.Application.Config.Views"
-             xmlns:prism="http://prismlibrary.com/"
-             prism:ViewModelLocator.AutoWireViewModel="True"
-             mc:Ignorable="d" 
-             d:Width="430" d:Height="500">
+﻿<UserControl
+    x:Class="Company.Application.Config.Views.ConfigView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Company.Application.Config.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    d:Height="500"
+    d:Width="430"
+    prism:ViewModelLocator.AutoWireViewModel="True"
+    mc:Ignorable="d">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+
+        <TabControl Controls:HeaderedControlHelper.HeaderFontSize="20">
+
+            <TabItem FontSize="14" Header="软件设置">
+                <StackPanel>
+                    <StackPanel Margin="5" Orientation="Horizontal">
+                        <TextBlock Width="100" Text="软件名称" />
+                        <TextBox Width="200" Text="{Binding SystemConfigProvider.SoftwareConfig.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    </StackPanel>
+                </StackPanel>
+            </TabItem>
+
+            <TabItem FontSize="14" Header="相机参数">
+                <StackPanel>
+                    <StackPanel Margin="5" Orientation="Horizontal">
+                        <TextBlock Width="100" Text="默认图像" />
+                        <TextBox Width="200" Text="{Binding SystemConfigProvider.CameraConfig.Photo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    </StackPanel>
+                    <StackPanel Margin="5" Orientation="Horizontal">
+                        <TextBlock Width="100" Text="图像宽度(像素)" />
+                        <TextBox Width="200" Text="{Binding SystemConfigProvider.CameraConfig.Width, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    </StackPanel>
+                    <StackPanel Margin="5" Orientation="Horizontal">
+                        <TextBlock Width="100" Text="图像高度(像素)" />
+                        <TextBox Width="200" Text="{Binding SystemConfigProvider.CameraConfig.Height, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    </StackPanel>
+                </StackPanel>
+            </TabItem>
+
+            <TabItem FontSize="14" Header="平板探测器参数">
+                <StackPanel>
+                    <StackPanel Margin="5" Orientation="Horizontal">
+                        <TextBlock Width="100" Text="默认图像" />
+                        <TextBox Width="200" Text="{Binding SystemConfigProvider.DetectorConfig.Photo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    </StackPanel>
+                    <StackPanel Margin="5" Orientation="Horizontal">
+                        <TextBlock Width="100" Text="图像宽度(像素)" />
+                        <TextBox Width="200" Text="{Binding SystemConfigProvider.DetectorConfig.Width, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    </StackPanel>
+                    <StackPanel Margin="5" Orientation="Horizontal">
+                        <TextBlock Width="100" Text="图像高度(像素)" />
+                        <TextBox Width="200" Text="{Binding SystemConfigProvider.DetectorConfig.Height, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    </StackPanel>
+                </StackPanel>
+            </TabItem>
+
+        </TabControl>
+
+        <DockPanel
+            Grid.Row="1"
+            Margin="0.5"
+            HorizontalAlignment="Right">
+            <Button
+                Width="80"
+                Height="30"
+                Margin="5"
+                Command="{Binding OkCommand}"
+                Content="{DynamicResource 确定}"
+                FontSize="14" />
+            <Button
+                Width="80"
+                Height="30"
+                Margin="5"
+                Content="{DynamicResource 取消}"
+                FontSize="14"
+                IsCancel="True" />
+        </DockPanel>
+
     </Grid>
 </UserControl>
