--- a/Company.Application.Initialize/Views/InitializeView.xaml
+++ b/Company.Application.Initialize/Views/InitializeView.xaml
@@ -3,10 +3,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:Company.Application.Initialize.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
-    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     d:Height="450"
     d:Width="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
@@ -20,8 +20,8 @@
         <TextBlock
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            TextWrapping="WrapWithOverflow"
             FontSize="20"
-            Text="{Binding Message}" />
+            Text="{Binding Message}"
+            TextWrapping="WrapWithOverflow" />
     </Grid>
 </UserControl>
