--- a/Company.UI/Languages/CN.xaml
+++ b/Company.UI/Languages/CN.xaml
@@ -6,4 +6,5 @@
     <sys:String x:Key="密码">密码</sys:String>
     <sys:String x:Key="登录">登录</sys:String>
     <sys:String x:Key="取消">取消</sys:String>
+    <sys:String x:Key="确定">确定</sys:String>
 </ResourceDictionary>
