--- a/Company.UI/Languages/CN.xaml
+++ b/Company.UI/Languages/CN.xaml
@@ -7,6 +7,6 @@
     <sys:String x:Key="登录">登录</sys:String>
     <sys:String x:Key="取消">取消</sys:String>
     <sys:String x:Key="确定">确定</sys:String>
-    <sys:String x:Key="记住密码">记住密码</sys:String>
+    <sys:String x:Key="记住我">记住我</sys:String>
     <sys:String x:Key="自动登录">自动登录</sys:String>
 </ResourceDictionary>
