--- a/Company.Application.Login/Views/LoginView.xaml
+++ b/Company.Application.Login/Views/LoginView.xaml
@@ -3,13 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:iconpacks="clr-namespace:MahApps.Metro.IconPacks;assembly=MahApps.Metro.IconPacks.Material"
     xmlns:local="clr-namespace:Company.Application.Login.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:viewmodels="clr-namespace:Company.Application.Login.ViewModels"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-    d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
@@ -32,18 +30,11 @@
                 </LinearGradientBrush>
             </Grid.Background>
             <TextBlock
-                Width="300"
-                Height="300"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
-                FontSize="36"
-                FontWeight="Bold">
-                <iconpacks:PackIconMaterial
-                    Width="300"
-                    Height="300"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Kind="Account" />
+                FontFamily="{StaticResource FontAwesome}"
+                FontSize="350"
+                Text="&#xf007;">
                 <TextBlock.Foreground>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                         <GradientStop Offset="0.0" Color="AliceBlue" />
