feat:采集平板探测器图像数据至双缓冲内存区域 2.变更模块注册方式

--- a/Company.Application.Main/Views/PrimaryView.xaml
+++ b/Company.Application.Main/Views/PrimaryView.xaml
@@ -14,7 +14,7 @@
         <TabItem Header="图像处理">
             <ContentControl prism:RegionManager.RegionName="{x:Static share:RegionNames.ProcessRegion}"></ContentControl>
         </TabItem>
-        <TabItem Header="绘图标记">
+        <TabItem Header="绘图工具">
             <ContentControl prism:RegionManager.RegionName="{x:Static share:RegionNames.DrawToolRegion}"></ContentControl>
         </TabItem>
     </TabControl>
