feat:16位灰色图源绑定到Image控件

--- a/Company.Application.Image/Views/ImageView.xaml
+++ b/Company.Application.Image/Views/ImageView.xaml
@@ -13,7 +13,7 @@
     mc:Ignorable="d">
     <Grid x:Name="viewport" Background="Gray">
         <Canvas ClipToBounds="True">
-            <Image />
+            <Image Source="{Binding Gray16ImageSource.ImageSource}"/>
         </Canvas>
     </Grid>
 </UserControl>
