--- a/Company.Application.Flow/Views/FlowView.xaml
+++ b/Company.Application.Flow/Views/FlowView.xaml
@@ -1,15 +1,14 @@
-﻿<UserControl x:Class="Company.Application.Process.Views.ProcessView"
+﻿<UserControl x:Class="Company.Application.Flow.Views.FlowView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Company.Application.Process.Views"
+             xmlns:local="clr-namespace:Company.Application.Flow.Views"
              xmlns:prism="http://prismlibrary.com/"
-             xmlns:share="clr-namespace:Company.Application.Share.Prism;assembly=Company.Application.Share"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <ContentControl prism:RegionManager.RegionName="{x:Static share:RegionNames.FlowRegion}"/>
+            
     </Grid>
 </UserControl>
