--- a/Company.Application.Flow/Views/AddFilterView.xaml
+++ b/Company.Application.Flow/Views/AddFilterView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Company.Application.Flow.Views.FlowView"
+﻿<UserControl x:Class="Company.Application.Flow.Views.AddFilterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,21 +7,10 @@
              xmlns:prism="http://prismlibrary.com/"
              xmlns:share="clr-namespace:Company.Application.Share.Prism;assembly=Company.Application.Share"
              prism:ViewModelLocator.AutoWireViewModel="True"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             Width="300" Height="500"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <ScrollViewer>
-            <StackPanel>
-                <ListBox/>
-                <Button Content="添加算法模型" Command="{Binding AddFilterCommand}"/>
-            </StackPanel>
-        </ScrollViewer>
-        <GroupBox Grid.Column="1" Margin="5 0 0 0">
-            <ContentControl prism:RegionManager.RegionName="{x:Static share:RegionNames.FilterRegion}"/>
-        </GroupBox>
+            
     </Grid>
 </UserControl>
