feat:增加图像处理滤波模块(2)

--- a/Company.Application.Filter/Views/TestFilterView.xaml
+++ b/Company.Application.Filter/Views/TestFilterView.xaml
@@ -10,6 +10,10 @@
              prism:ViewModelLocator.AutoWireViewModel="True"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <StackPanel Orientation="Horizontal">
+            <Slider Maximum="65535" Minimum="0" Value="{Binding FilterModel.Value}" Width="100"/>
+            <TextBox Height="25" Text="{Binding FilterModel.Value, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="50"/>
+            <TextBlock Text="0-65535"/>
+        </StackPanel> 
     </Grid>
 </UserControl>
