--- a/Company.UI/Styles/Icon.xaml
+++ b/Company.UI/Styles/Icon.xaml
@@ -1,4 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <BitmapImage x:Key="Icon_Test" UriSource="/Company.UI;component/Icons/010_出差申请.png"/>
+    <BitmapImage x:Key="Icon_Sobel" UriSource="/Company.UI;component/Icons/010_打卡签到.png"/>
 </ResourceDictionary>
