--- a/Company.UI/Styles/Icon.xaml
+++ b/Company.UI/Styles/Icon.xaml
@@ -2,4 +2,5 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <BitmapImage x:Key="Icon_Test" UriSource="/Company.UI;component/Icons/010_出差申请.png"/>
     <BitmapImage x:Key="Icon_Sobel" UriSource="/Company.UI;component/Icons/010_打卡签到.png"/>
+    <BitmapImage x:Key="Icon_MedianBlur" UriSource="/Company.UI;component/Icons/010_发现更多.png"/>
 </ResourceDictionary>
