--- a/Company.Application.Filter/Views/MedianBlurFilterView.xaml
+++ b/Company.Application.Filter/Views/MedianBlurFilterView.xaml
@@ -11,9 +11,9 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <StackPanel Orientation="Horizontal">
-            <Slider Maximum="21" Minimum="3" Value="{Binding FilterModel.Value}" Width="100"/>
+            <Slider Maximum="9" Minimum="1" TickFrequency="2" IsSnapToTickEnabled="True" Value="{Binding FilterModel.Value}" Width="100"/>
             <TextBox Height="25" Text="{Binding FilterModel.Value, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="50"/>
-            <TextBlock Text="3,5,7..."/>
+            <TextBlock Text="1-3-5-7-9"/>
         </StackPanel>
     </Grid>
 </UserControl>
