--- a/Company.Application.Filter/Views/SobelFilterView.xaml
+++ b/Company.Application.Filter/Views/SobelFilterView.xaml
@@ -4,13 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Company.Application.Filter.Views"
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:share="clr-namespace:Company.Application.Share.Prism;assembly=Company.Application.Share"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <StackPanel Orientation="Horizontal">
-            <Slider Maximum="65535" Minimum="0" Value="{Binding FilterModel.Value}" Width="100"/>
+            <Slider Maximum="7" Minimum="1" TickFrequency="2" IsSnapToTickEnabled="True" Value="{Binding FilterModel.Value}" Width="100"/>
             <TextBox Height="25" Text="{Binding FilterModel.Value, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="50"/>
-            <TextBlock Text="0-65535"/>
+            <TextBlock Text="1-3-5-7"/>
         </StackPanel>
     </Grid>
 </UserControl>
