--- a/Company.UI/Styles/Converter.xaml
+++ b/Company.UI/Styles/Converter.xaml
@@ -1,4 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:converters="clr-namespace:Company.UI.Converters">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:converters="clr-namespace:Company.UI.Converters">
     <converters:IconToImageConverter x:Key="IconToImageConverter"/>
+    <converters:BoolToMovingConverter x:Key="BoolToMovingConverter"/>
 </ResourceDictionary>
